fix: prevent mobile header overlap with hamburger menu

--- a/website/index.css
+++ b/website/index.css
@@ -73,6 +73,7 @@ header {
   padding: 1em;
   background-color: var(--color-background);
   text-align: center;
+  position: relative;
 }
 
 #container {
@@ -378,11 +379,22 @@ main {
 }
 
 @media (0 <= width <= 800px) {
+  header {
+    padding-top: 2.8rem;
+  }
+
   #top-left {
-    top: 5px;
-    right: 5px;
-    text-align: right;
+    top: 0.45rem;
+    left: 0.5rem;
+    right: auto;
+    text-align: left;
     color: var(--color-background-gray);
+    max-width: calc(100% - 4rem);
+  }
+
+  #top-right {
+    top: 0.35rem;
+    right: 0.35rem;
   }
 
   #sort-container,
@@ -391,7 +403,7 @@ main {
   }
 
   h1 {
-    margin: 0.25em;
+    margin: 0.25em 2.5rem 0.25em 0.5rem;
   }
 
   #header-comment {
